--- a/express_server/package.json
+++ b/express_server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-server",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
