Routing Top 5 movies JOIN(Error in movieClass)

--- a/spring_boot_server/spring_boot_server/src/main/resources/application.properties
+++ b/spring_boot_server/spring_boot_server/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=spring_boot_server
 server.port=3002
 
 # DataSource settings: PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/NOMEDB
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/Movie_main_data
+spring.datasource.username=postgress
+spring.datasource.password=uni2003 /*password inventata*/
 
 # Specify the JDBC driver for PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
