--- a/spring_boot_server/spring_boot_server/src/main/resources/application.properties
+++ b/spring_boot_server/spring_boot_server/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=spring_boot_server
 server.port=3002
 
 # DataSource settings: PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/NOMEDB
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/tweb2425
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Specify the JDBC driver for PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
